Traefik/TraefikService/02-Deployment-V2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-v2-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-v2-app
  template:
    metadata:
      labels:
        app: webapp-v2-app
    spec:
      containers:
      - name: app
        image: fpommerening/container-training:webapp-v2
