Traefik/TraefikService/03-Deployment-V3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-v3-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-v3-app
  template:
    metadata:
      labels:
        app: webapp-v3-app
    spec:
      containers:
      - name: app
        image: fpommerening/container-training:webapp-v3
