Traefik/TraefikService/04-Service-V1.yaml
apiVersion: v1
kind: Service
metadata:
   name: webapp-v1-srv
   labels:
      app: webapp-v1-srv
spec:
   ports:
      - port: 80
        name: app
   selector:
      app: webapp-v1-app
