Traefik/TraefikService/05-Service-V2.yaml
apiVersion: v1
kind: Service
metadata:
   name: webapp-v2-srv
   labels:
      app: webapp-v2-srv
spec:
   ports:
      - port: 80
        name: app
   selector:
      app: webapp-v2-app
