Traefik/TraefikService/08-IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp-ingress-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`canary.ddc-cloud.de`)
    kind: Rule
    services:
    - name: webapp-traefik-service
      kind: TraefikService
